Try to fix table question spacings

--- a/packages/survey-core/src/default-theme/blocks/sd-table.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-table.scss
@@ -77,7 +77,6 @@
 .sd-table--no-header {
   padding-top: var(--sjs2-spacing-x300);
 }
-
 .sd-panel:not(.sd-panel--as-page) {
   & > .sd-panel__content {
     // .sd-table--no-header {
@@ -439,7 +438,7 @@
       &>.sd-question__header-and-content-container {
         &>.sd-question__content:first-child {
           .sd-table-wrapper .sd-table:not(.sd-table--no-header) {
-            margin-top: var(--sjs2-spacing-negative-x300);
+            margin-top: var(--sjs2-spacing-negative-x200);
           }
         }
       }
@@ -859,4 +858,48 @@
 
 .sd-table.sd-matrixdynamic {
   table-layout: auto;
+}
+
+////////////////////////////////////////////////////////////////////////////////////////
+
+.sd-question--table {
+  &.sd-element--with-frame {
+    &>.sd-question__container {
+      &>.sd-question__header-and-content-container {
+        &>.sd-question__content {
+          .sd-table-wrapper > .sd-table.sd-table--no-header {
+          }
+          .sd-table-wrapper > .sd-table:not(.sd-table--no-header) {
+          }
+          &:first-of-type { // No question header
+            .sd-table-wrapper > .sd-table.sd-table--no-header {
+            }
+            .sd-table-wrapper > .sd-table:not(.sd-table--no-header) {
+            }
+          }
+        }
+      }
+    }
+  }
+  &.sd-element--nested {
+    &>.sd-question__container {
+      padding: 0;
+      &>.sd-question__header-and-content-container {
+        padding: 0;
+        &>.sd-question__content {
+          .sd-table-wrapper > .sd-table.sd-table--no-header {
+          }
+          .sd-table-wrapper > .sd-table:not(.sd-table--no-header) {
+          }
+          &:first-of-type { // No question header
+            .sd-table-wrapper > .sd-table.sd-table--no-header {
+              padding-top: 0;
+            }
+            .sd-table-wrapper > .sd-table:not(.sd-table--no-header) {
+            }
+          }
+        }
+      }
+    }
+  }
 }
